[package]
name = "actuality"
version = "0.1.0"
rust_version = "1.56.0"
edition = "2021"
authors = ["Begley Brothers Inc. <begleybrothers@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rtm-rs/actuality"
homepage = "https://rtm-rs.org"
documentation = "https://docs.rs/actuality"
description = """
Opinionated CQRS-ES for Rust Type Mapper (RTM) crate rtm-rs.
"""
categories = [
    "database",
    "data-structures",
    "asynchronous",
    "rust-patterns"
]

keywords = ["async", "cqrs", "event-sourcing", ]
autoexamples = false

[workspace]
members = [
  "actuality-attributes",
  "actuality-examples",
  "actuality-jetstream",
  "actuality-testing",
  "actuality-macros",
  ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
