[package]
name = "actuality"
version = "0.1.0"
rust_version = "1.56.0"
edition = "2021"
authors = ["Begley Brothers Inc. <begleybrothers@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rtm-rs/actuality"
homepage = "https://rtm-rs.org"
documentation = "https://docs.rs/actuality"
description = """
Opinionated CQRS-ES for Rust Type Mapper (RTM) crate rtm-rs.
"""
categories = [
    "database",
    "data-structures",
    "asynchronous",
    "rust-patterns"
]

keywords = ["async", "cqrs", "event-sourcing", ]
autoexamples = false

[workspace]
members = [
  "actuality-attributes",
  "actuality-examples",
  "actuality-jetstream",
  "actuality-tests",
  "actuality-utilities",
  "actuality-macros",
  ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
# log = "0.4.11"
# serde_json = "1.0.59"
# serde = "1.0.117"
# serde_derive = "1.0.117"
# env_logger = "0.8.1"

[dev-dependencies]
actuality-utilities = { path = "actuality-utilities" }
async-trait = "0.1"
criterion = { version ="0.3.5", features = ["html_reports"] }
cucumber = "0.13"
futures = "0.3"
nats = "0.21"
