[package]
name = "actuality"
version = "0.1.0"
rust_version = "1.56.0"
edition = "2021"
authors = ["Begley Brothers Inc. <begleybrothers@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rtm-rs/actuality"
homepage = "https://rtm-rs.org"
documentation = "https://docs.rs/actuality"
description = """
Opinionated CQRS-ES for Rust Type Mapper (RTM) crate rtm-rs.
"""
categories = [
    "database",
    "data-structures",
    "asynchronous",
    "rust-patterns"
]

keywords = ["async", "cqrs", "event-sourcing", ]
autoexamples = false

[workspace]
members = [
  "actuality-attributes",
  "actuality-examples",
  "actuality-jetstream",
  "actuality-tests",
  "actuality-utilities",
  "actuality-macros",
  ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = "0.4.19"
nats = "0.21"
rand = "0.8.5"
rkyv = "0.7.39"
serde_json = "1.0.81"
serde = "1.0.137"
serde_derive = "1.0.137"
tokio = { version = "1.19.2", features = ["full", "macros", "sync", "rt-multi-thread"] }
uuid = "1.1.2"

[dev-dependencies]
actuality-utilities = { path = "actuality-utilities" }
criterion = { version ="0.3.5", features = ["html_reports"] }
cucumber = "0.13"
futures = "0.3"
tokio = { version = "1.19.2", features = ["full", "macros", "sync", "rt-multi-thread"] }
